# pycon25

./: lint.sh  pyproject.toml
src/: run.py  worker.py
src/agents/: __init__.py
src/agents/linkedin/tools/: __init__.py  create_post.py  simulate_post.py
src/agents/marketer/: marketer.py
src/agents/researcher/: __init__.py
src/agents/researcher/tools/: __init__.py  read_website.py
src/agents/twitter/: __init__.py  twitter_agent.py
src/agents/twitter/tools/: __init__.py  compose_tweet.py  judge_tweet.py
src/common/: dependencies.py  llm.py  response.py
